--- a/chirp.ipynb
+++ b/chirp.ipynb
@@ -83,7 +83,7 @@
     "f  = [2, 10]\n",
     "c = np.diff(f) / (t[-1] - t[0])\n",
     "phi_t = (c/2) * t **2 + f[0]*t\n",
-    "#ff = 0.5*np.linspace(f[0], f[1],n)**2\n",
+    "#ff = np.linspace(f[0], f[1],n)\n",
     "signal1 = np.sin(2*np.pi*phi_t)\n",
     "signal2 = np.sin(2*np.pi*np.mean(f)*t)\n",
     "\n",
