--- a/chirp_sum.ipynb
+++ b/chirp_sum.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +91,8 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "f, t, Sxx = signal.spectrogram(signal_sum, srate)\n",
-    "plt.pcolormesh(t, f, Sxx);\n",
+    "f_, t_, Sxx = signal.spectrogram(signal_sum, srate)\n",
+    "plt.pcolormesh(t_, f_, Sxx);\n",
     "plt.title('Spectrogram')\n",
     "plt.xlim([0,10])\n",
     "plt.ylim([0,500]);"
